# DD2360-Project

./: .gitignore  CMakeLists.txt  README.md  test
src/InOneWeekend/: hittable.h  hittable_list.h  main.cc  main.cu  material.h  material_cuda.h  render.h  render_cpu.h  render_gpu.h  sphere.h  test.cu
src/common/: camera.h  color.h  cuda_utils.h  ray.h  rtweekend.h  vec3.h
